tests/ui/strict_decode/missing_join_for_multi_table_selector.stderr
error[E0277]: the trait bound `Nil: drizzle_core::row::ScopeContains<Post, _>` is not satisfied
  --> tests/ui/strict_decode/missing_join_for_multi_table_selector.rs:38:77
   |
38 |     let _rows: Vec<UserPostRow> = db.select(UserPostRow::Select).from(user).all().unwrap();
   |                                                                             ^^^ the trait `drizzle_core::row::ScopeContains<Post, _>` is not implemented for `Nil`
   |
help: the following other types implement trait `drizzle_core::row::ScopeContains<Table, Witness>`
  --> core/src/row/mod.rs
   |
   |   impl<Head, Tail> ScopeContains<Head, ScopeHere> for Cons<Head, Tail> {}
   |   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ `Cons<Head, Tail>` implements `drizzle_core::row::ScopeContains<Head, drizzle_core::row::ScopeHere>`
   |
   | / impl<Head, Tail, Table, Witness> ScopeContains<Table, ScopeThere<Witness>> for Cons<Head, Tail> where
   | |     Tail: ScopeContains<Table, Witness>
   | |_______________________________________^ `Cons<Head, Tail>` implements `drizzle_core::row::ScopeContains<Table, drizzle_core::row::ScopeThere<Witness>>`
   = note: required for `Cons<User, Nil>` to implement `drizzle_core::row::ScopeContains<Post, drizzle_core::row::ScopeThere<_>>`
   = note: required for `Cons<User, Nil>` to implement `drizzle_core::row::ScopeSatisfies<Cons<Post, Nil>, (drizzle_core::row::ScopeThere<_>, ())>`
   = note: 1 redundant requirement hidden
   = note: required for `Cons<User, Nil>` to implement `drizzle_core::row::ScopeSatisfies<Cons<User, Cons<Post, Nil>>, (drizzle_core::row::ScopeHere, (drizzle_core::row::ScopeThere<_>, ()))>`
   = note: required for `Scoped<SelectAs<UserPostRow>, Cons<User, Nil>>` to implement `MarkerScopeValidFor<(drizzle_core::row::ScopeHere, (drizzle_core::row::ScopeThere<_>, ()))>`
note: required by a bound in `drizzle::builder::sqlite::rusqlite::<impl drizzle::builder::sqlite::common::DrizzleBuilder<'a, Connection, S, drizzle::sqlite::builder::QueryBuilder<'b, Schema, State, Table, Mk, Rw>, State>>::all`
  --> src/builder/sqlite/rusqlite/mod.rs
   |
   |     pub fn all<R, Proof>(self) -> drizzle_core::error::Result<Vec<R>>
   |            --- required by a bound in this associated function
...
   |             + drizzle_core::row::MarkerScopeValidFor<Proof>
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `drizzle::builder::sqlite::rusqlite::<impl DrizzleBuilder<'a, Connection, S, QueryBuilder<'b, Schema, State, Table, Mk, Rw>, State>>::all`
